--- a/src/main/java/com/chrislaforetsoftware/logslicer/MainView.fxml
+++ b/src/main/java/com/chrislaforetsoftware/logslicer/MainView.fxml
@@ -8,29 +8,43 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane id="scrollPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chrislaforetsoftware.logslicer.controller.MainViewController">
-   <children>
-      <MenuBar fx:id="menuBar" layoutY="-2.0" prefHeight="31.0" prefWidth="600.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <menus>
-          <Menu mnemonicParsing="false" text="File">
-            <items>
-              <MenuItem mnemonicParsing="false" onAction="#handleOpenLog" text="Open log..." />
-              <MenuItem mnemonicParsing="false" onAction="#handleClose" text="Close" />
-            </items>
-          </Menu>
-        </menus>
-      </MenuBar>
-
-      <ScrollPane layoutY="31.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="31.0">
-         <content>
-            <Pane prefHeight="200.0" prefWidth="200.0">
-               <children>
-                  <TextField />
-                  <TextField layoutY="26.0" />
-                  <TextField layoutY="52.0" />
-               </children>
-            </Pane>
-         </content>
-      </ScrollPane>
-   </children>
-</AnchorPane>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.BorderPane?>
+<BorderPane id="scrollPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chrislaforetsoftware.logslicer.controller.MainViewController">
+    <top>
+        <MenuBar fx:id="menuBar" layoutY="-2.0" prefHeight="31.0" prefWidth="600.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <menus>
+                <Menu mnemonicParsing="false" text="File">
+                    <items>
+                        <MenuItem mnemonicParsing="false" onAction="#handleOpenLog" text="Open log..." />
+                        <MenuItem mnemonicParsing="false" onAction="#handleClose" text="Close" />
+                    </items>
+                </Menu>
+            </menus>
+        </MenuBar>
+    </top>
+    <center>
+        <AnchorPane>
+            <TextArea editable="false" prefHeight="400.0" prefWidth="600.0" text="Load a log file using File-Open" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0" />
+        </AnchorPane>
+    </center>
+    <bottom>
+        <HBox>
+            <padding>
+                <Insets bottom="5.0" left="5.0" right="5.0" />
+            </padding>
+            <HBox alignment="CENTER_LEFT" HBox.hgrow="ALWAYS">
+                <Label fx:id="statusMessage" prefWidth="150.0" text="Checking for Changes..." />
+                <ProgressBar fx:id="progressBar" prefWidth="150.0" progress="0.0" />
+            </HBox>
+            <HBox alignment="CENTER_RIGHT" HBox.hgrow="ALWAYS">
+                <Button fx:id="loadChangesButton" mnemonicParsing="false" text="Load Changes" />
+            </HBox>
+        </HBox>
+    </bottom>
+</BorderPane>
