--- a/src/main/java/com/chrislaforetsoftware/logslicer/MainView.fxml
+++ b/src/main/java/com/chrislaforetsoftware/logslicer/MainView.fxml
@@ -6,11 +6,10 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.Pane?>
 
 <BorderPane id="scrollPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chrislaforetsoftware.logslicer.controller.MainViewController">
     <top>
@@ -25,19 +24,8 @@
             </menus>
         </MenuBar>
     </top>
-    <left>
-        <TextArea fx:id="logLineNumber" editable="false" prefHeight="400.0" prefWidth="80.0" text=" " AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
-            <font>
-                <Font name="Courier New" size="13.0" />
-            </font>
-        </TextArea>
-    </left>
     <center>
-        <TextArea fx:id="logText" editable="false" onScroll="#handleScroll" prefHeight="400.0" prefWidth="600.0" text="Load a log file using File-Open" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
-         <font>
-            <Font name="Courier New" size="13.0" />
-         </font>
-        </TextArea>
+
     </center>
     <bottom>
         <HBox>
@@ -56,4 +44,7 @@
             </HBox>
         </HBox>
     </bottom>
+   <center>
+      <Pane fx:id="activePane" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+   </center>
 </BorderPane>
