--- a/src/main/java/com/chrislaforetsoftware/logslicer/PasteLogView.fxml
+++ b/src/main/java/com/chrislaforetsoftware/logslicer/PasteLogView.fxml
@@ -11,7 +11,8 @@
       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="61.0" prefWidth="480.0">
          <children>
             <Label layoutX="14.0" layoutY="22.0" text="Paste the content of the log below and click Prepare button" />
-         </children></AnchorPane>
+         </children>
+      </AnchorPane>
     </header>
     <content>
       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="206.0" prefWidth="480.0">
