markup index window initial behavior

--- a/src/main/java/com/chrislaforetsoftware/logslicer/MarkupIndex.fxml
+++ b/src/main/java/com/chrislaforetsoftware/logslicer/MarkupIndex.fxml
@@ -19,12 +19,12 @@
     <content>
         <AnchorPane prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
            <children>
-              <TableView prefHeight="255.0" prefWidth="464.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" AnchorPane.bottomAnchor="0.0">
+              <TableView fx:id="markupTable" prefHeight="255.0" prefWidth="464.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" AnchorPane.bottomAnchor="0.0">
                 <columns>
-                  <TableColumn prefWidth="50.0" text="Type" />
-                  <TableColumn prefWidth="75.0" text="Start line" />
-                  <TableColumn prefWidth="75.0" text="End line" />
-                  <TableColumn prefWidth="150.0" text="Root tag" />
+                  <TableColumn fx:id="markupType" prefWidth="50.0" text="Type" />
+                  <TableColumn fx:id="startLine" prefWidth="75.0" text="Start line" />
+                  <TableColumn fx:id="endLine" prefWidth="75.0" text="End line" />
+                  <TableColumn fx:id="rootTag" prefWidth="150.0" text="Root tag" />
                 </columns>
               </TableView>
            </children>
